@@ -58,7 +58,6 @@ module glide_thckADI
      real(dp) :: dns
      real(dp) :: thklim
      real(dp) :: alpha
-     real(dp) :: dt
      integer  :: basal_mbal_flag
      real(dp),dimension(:,:),GC_DYNARRAY_ATTRIB :: dintflwa  
      !< Vertically-integrated value of Glen's A
@@ -66,12 +65,13 @@ module glide_thckADI
      real(dp),dimension(:,:),GC_DYNARRAY_ATTRIB :: vflx  !< v flux
      real(dp),dimension(:),  GC_DYNARRAY_ATTRIB :: velo_dups
      real(dp),dimension(:),  GC_DYNARRAY_ATTRIB :: depth
-     real(dp),dimension(6) :: fc2 = 0.0
+     real(dp) :: fc2_3, fc2_4 !< convenience constants 
+     integer :: periodic_ew !< Set to indicate periodic BCs
   end type thckADI_type
 
 contains
 
-  subroutine thckADI_init(params,ewn,nsn,upn,sigma,dew,dns,thklim,alpha,dt,basal_mbal_flag)
+  subroutine thckADI_init(params,ewn,nsn,upn,sigma,dew,dns,thklim,alpha,basal_mbal_flag,periodic_ew)
 
     use glimmer_global, only: dp
     use physcon,        only: gn
@@ -87,8 +87,8 @@ contains
     real(dp),          intent(in)  :: dns
     real(dp),          intent(in)  :: thklim
     real(dp),          intent(in)  :: alpha
-    real(dp),          intent(in)  :: dt
     integer,           intent(in)  :: basal_mbal_flag
+    integer,           intent(in)  :: periodic_ew
 
     integer :: up
 
@@ -99,8 +99,8 @@ contains
     params%dns = dns
     params%thklim = thklim
     params%alpha = alpha
-    params%dt = dt  !###### This is Temporary #######
     params%basal_mbal_flag = basal_mbal_flag
+    params%periodic_ew = periodic_ew
 
     if (GC_DYNARRAY_CHECK(params%dintflwa)) deallocate(params%dintflwa)
     if (GC_DYNARRAY_CHECK(params%uflx))     deallocate(params%uflx)
@@ -117,12 +117,8 @@ contains
     params%velo_dups = (/ (sigma(up+1) - sigma(up), up=1,upn-1),0.0d0 /)
     params%depth = (/ (((sigma(up+1)+sigma(up))/2.0d0)**gn *(sigma(up+1)-sigma(up)),up=1,upn-1),0.0d0 /)
 
-    params%fc2(1) = alpha * dt / (2.0d0 * dew * dew)
-    params%fc2(2) = 0.0
-    params%fc2(3) = (1.0d0 - alpha) / alpha
-    params%fc2(4) =  1.0d0 / alpha
-    params%fc2(5) =  alpha * dt / (2.0d0 * dns * dns)
-    params%fc2(6) =  0.0d0
+    params%fc2_3 = (1.0d0 - alpha) / alpha
+    params%fc2_4 =  1.0d0 / alpha
 
   end subroutine thckADI_init
 
